# static-validator

./: .gitignore  LICENSE  README.md  SCHEMA.md
docs/: coordination.md  session_notes_2026-05-10.md
experiments/wnbf_audit_2026_05_11/: .gitignore  BACKLOG.md  README.md  SESSION_SUMMARY.md  descriptors_clean.json  harness_v2.py  harness_v3.py  load_to_supabase.py  parse_to_canonical.py  reparse_amortization.py  reparse_principal.py  v2_canonical.json
mcp/: README.md  pyproject.toml
mcp/src/static_validator_mcp/: __init__.py  data_provider.py  server.py
mcp/src/static_validator_mcp/fixtures/: panama_2060.json
mcp/tests/: test_tools.py
python/: README.md  pyproject.toml
python/src/static_validator/: __init__.py  adapter.py  canonicalize.py  cli.py  derivations.py  gemini_extractor.py  hashes.py  validate.py  wire.py
python/tests/: test_adapter.py  test_canonicalize.py  test_derivations.py  test_gemini_extractor.py  test_hashes.py  test_validate.py  test_wire_contract.py
python/tests/golden/: panama_2060.expected.json  panama_2060.input.json
schema/: README.md  published_record.schema.json  source_reference.schema.json  structural_flags.schema.json  tier_hashes.schema.json  validate_request.schema.json  validate_response.schema.json  where_to_find.schema.json
