[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "static-validator"
version = "0.1.0"
description = "Reference Python implementation of the static-validator canonical bond static schema."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "urbancanary"}]
keywords = ["bond", "static-data", "validation", "hash", "canonical-json"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
static-validator = "static_validator.cli:main"

[project.urls]
Homepage = "https://github.com/urbancanary/static-validator"
Repository = "https://github.com/urbancanary/static-validator"
Issues = "https://github.com/urbancanary/static-validator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
